src/k8s/apps/capacitor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  namespace: capacitor
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capacitor
  template:
    metadata:
      labels:
        app: capacitor
    spec:
      serviceAccountName: capacitor-next
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: capacitor
          image: ghcr.io/gimlet-io/capacitor-next:0.14.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
