src/k8s/apps/capacitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: capacitor
spec:
  type: ClusterIP
  selector:
    app: capacitor
  ports:
    - name: http
      port: 80
      targetPort: http
